<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eErrorHandlingSTM" Id="{21847fa1-55e7-464a-8c03-3059761eb970}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eErrorHandlingSTM :
(
	CheckforErrorMessages,
	ShowWarning,
	ShowError,
	Clear
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>