<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eErrorList" Id="{3a850c02-3d91-4e9f-94d7-922f70e1c714}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE eErrorList :
(
	NoError	:= 0,
	CommunicationError := 1,	
	OutOfRange := 2,
	NoConnectionToXMC
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>