<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eWarningMessages" Id="{bb534179-d401-480e-a91e-6ee84df9094d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eWarningMessages :
(
	DistanceSensor_OutOfRange,
	DistanceSensor_CommunicationError,
	IMU1_OutOfRange,
	IMU2_OutOfRange
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>