<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="MyGVLData" Id="{3f1f5507-4f43-44c6-8c8d-3740720b8ce0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	lrDistanceSensorServiceModule AT %Q* : LREAL;
	
	sWarningMessage AT %Q* : ARRAY [0..9] OF STRING;
	sErrorMessage AT %Q* : ARRAY [0..9] OF STRING;
	
	
	sErrorMessageServiceModule AT %Q* : STRING;
	sErrorMessageLevitationSystem AT %Q* : STRING;
	sErrorMessageGuidanceSystem AT %Q* : STRING;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>